adds public Reviews endpoints impl
